crates/marxml/tests/snapshots/fixture_suite__fixture_select_probes@04-deeply-nested.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: out
input_file: crates/marxml/tests/fixtures/select/04-deeply-nested.md
---
task -> []
phase -> []
* -> [a#root, b, c, d, e#leaf]
task[status="todo"] -> []
task[id^="1."] -> []
phase task -> []
phase > task -> []
*:first-child -> [a#root, b, c, d, e#leaf]
*:not([id]) -> [b, c, d]
