crates/marxml/tests/snapshots/fixture_suite__fixture_select_probes@05-no-matches.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: out
input_file: crates/marxml/tests/fixtures/select/05-no-matches.md
---
task -> []
phase -> []
* -> []
task[status="todo"] -> []
task[id^="1."] -> []
phase task -> []
phase > task -> []
*:first-child -> []
*:not([id]) -> []
