crates/marxml/tests/snapshots/fixture_suite__fixture_validate_probes@01-fully-compliant.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: out
input_file: crates/marxml/tests/fixtures/validate/01-fully-compliant.md
---
valid: true
