crates/marxml/tests/snapshots/fixture_suite__fixture_validate_probes@03-invalid-enum.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: out
input_file: crates/marxml/tests/fixtures/validate/03-invalid-enum.md
---
valid: false
  - line 1: <phase> attribute status has invalid value "bogus" (expected one of ["done", "todo"])
  - line 2: <task> attribute status has invalid value "haha" (expected one of ["done", "skip", "todo"])
