crates/marxml/tests/snapshots/fixture_suite__fixture_validate_probes@04-empty-content.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: out
input_file: crates/marxml/tests/fixtures/validate/04-empty-content.md
---
valid: false
  - line 2: <status> requires non-empty content
